# predisclose

./: .gitignore  .leakguard-baseline.json  .pre-commit-hooks.yaml  .predisclose-baseline.json  .prediscloseignore  README.md  pr-comment-canary.txt  pyproject.toml
.github/workflows/: predisclose.yml  release.yml
docs/: benchmark.md
hooks/: pre-commit
leakguard/: __init__.py  agent.py  cli.py  engine.py  entropy.py  fsscan.py  history.py  patterns.py  proximity.py  report.py  verify.py
predisclose/: __init__.py  agent.py  ai.py  baseline.py  cli.py  engine.py  entropy.py  fsscan.py  github_scan.py  history.py  notify.py  patterns.py  proximity.py  report.py  sarif.py  verify.py
rules/: example.rules.json
scripts/: benchmark.py  build_pyz.py
tests/: test_acceptance.py  test_agent.py  test_ai.py  test_baseline.py  test_engine.py  test_entropy.py  test_fsscan_sniff.py  test_github_scan.py  test_history.py  test_longline.py  test_notify.py  test_proximity.py  test_pyz.py  test_report.py  test_rules_url.py  test_sarif.py  test_verify.py
