[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leakguard"
version = "0.4.2"
description = "Detect internal identifiers, secrets, and PII before they leak into public artifacts."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Zach B." }]
keywords = ["security", "secrets", "pii", "pre-commit", "disclosure", "scanner", "ci", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# The core is standard-library only (zero runtime dependencies). The optional
# `ai` extra adds two LOCAL supplementary layers (see leakguard/ai.py):
#   - Presidio PII detection (presidio-analyzer + a spaCy model)
#   - a local OpenAI-compatible LLM reviewer (uses stdlib urllib, no client dep)
# Install with:  pip install 'leakguard[ai]'
[project.optional-dependencies]
ai = ["presidio-analyzer", "spacy"]

[project.urls]
Homepage = "https://github.com/Yggdrasil-AI-labs/leakguard"
Issues = "https://github.com/Yggdrasil-AI-labs/leakguard/issues"

[project.scripts]
leakguard = "leakguard.cli:main"

[tool.setuptools]
packages = ["leakguard"]
