[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "predisclose"
version = "0.6.2"
description = "Detect internal identifiers, secrets, and PII before they leak into public artifacts."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Zach B." }]
keywords = ["security", "secrets", "pii", "pre-commit", "disclosure", "scanner", "ci", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# The core is standard-library only (zero runtime dependencies). The optional
# `ai` extra adds two LOCAL supplementary layers (see predisclose/ai.py):
#   - Presidio PII detection (presidio-analyzer + a spaCy model)
#   - a local OpenAI-compatible LLM reviewer (uses stdlib urllib, no client dep)
# Install with:  pip install 'predisclose[ai]'
[project.optional-dependencies]
ai = ["presidio-analyzer", "spacy"]

[project.urls]
Homepage = "https://github.com/Yggdrasil-AI-labs/predisclose"
Issues = "https://github.com/Yggdrasil-AI-labs/predisclose/issues"

[project.scripts]
predisclose = "predisclose.cli:main"

[tool.setuptools]
packages = ["predisclose"]
